Storage Integration Testing

--- a/Bang.Module.Users.Tests/Bang.Module.Users.Tests.csproj
+++ b/Bang.Module.Users.Tests/Bang.Module.Users.Tests.csproj
@@ -57,6 +57,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UsersStorageTests.cs" />
     <Compile Include="UsersServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -69,6 +70,9 @@
       <Project>{b0f1a001-4ae0-4091-bb3f-8dced3d373ef}</Project>
       <Name>Bang.Module.Users</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
